# gonewrong

./: README.md  pyproject.toml
.github/workflows/: gate.yml
gonewrong/: __init__.py  _compat.py
tests/: test_compat.py  test_gonewrong.py
